@@ -10,6 +10,8 @@ Version 1.7.14+svn:
      traits because of usage of local RNG instead of MP RNG.
  * Music and sound effects:
    * Added new music track, "Weight of Revenge" by Doug Kaufman
+ * User interface:
+   * Avoid the scrollbar on the entire MP lobby when possible.
 
 Version 1.7.14-1.8beta7:
  * Language and i18n:
