@@ -17,6 +17,9 @@ Version 1.7.14+svn:
      traits because of usage of local RNG instead of MP RNG.
  * Music and sound effects:
    * Added new music track, "Weight of Revenge" by Doug Kaufman
+ * User interface:
+   * Improved resizing of a window when the contents don't fit, fixes the
+     window scrollbars in the MP lobby
  	
 Version 1.7.14-1.8beta7:
  * AI:
